2009-02-24  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.csproj:
	* Data/WellKnownText:
	* Data/SimpleFeatureAccess:
	* Data/SimpleFeatureAccess/WellKnownText.cs:
	* Data/WellKnownText/SimpleFeatureAccess.cs:
	* Data/SimpleFeatureAccess/WellKnownBinary.cs:
	* Data/SimpleFeatureAccess/SimpleFeatureAccess.cs: add WKB
	parser

2009-02-23  Scott Ellington  <scott.ellington@gmail.com>

	* Point.cs:
	* Rectangle.cs: implement IEquatable<T>

2009-02-16  Scott Ellington  <scott.ellington@gmail.com>

	* Xml/Serialization/MapSerializer.cs: use generic type methods

2009-02-11  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: center labels

2009-02-10  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: use better outline label on ms.net

2009-02-10  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Xml/Serialization/MapSerializer.cs: range min/max should
	defaut to double min/max respectively

2009-01-24  Scott Ellington  <scott.ellington@gmail.com>

	* Xml/Serialization/MapSerializer.cs: use LocalName for xml nodes

2009-01-22  Scott Ellington  <scott.ellington@gmail.com>

	* AssemblyInfo.cs: bump version to 0.3

2009-01-16  Scott Ellington  <scott.ellington@gmail.com>

	* Xml/Serialization/MapSerializer.cs: fix utf-8 output

	* Data/KeyholeMarkupLanguage.cs: output utf-8

2009-01-16  Scott Ellington  <scott.ellington@gmail.com>

	* Xml/Serialization/MapSerializer.cs: fix locale issues

2009-01-15  Scott Ellington  <scott.ellington@gmail.com>

	* Data/KeyholeMarkupLanguage.cs: fix regression Style.id is attribute

2009-01-13  Scott Ellington  <scott.ellington@gmail.com>

	* Data/WellKnownText/SimpleFeatureAccess.cs: more locale fixes

2009-01-13  Scott Ellington  <scott.ellington@gmail.com>

	* Data/KeyholeMarkupLanguage.cs:
	* Data/WellKnownText/SimpleFeatureAccess.cs: more localization fixes

2009-01-13  Scott Ellington  <scott.ellington@gmail.com>
